[gd_scene load_steps=5 format=2]

[ext_resource path="res://Globals.gd" type="Script" id=1]
[ext_resource path="res://assets/SpacePingPong.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/TitleThemeSpacePong.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/spacepongcredits.wav" type="AudioStream" id=4]

[node name="Globals" type="Node2D"]
script = ExtResource( 1 )

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="TitleTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CreditsTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="finished" from="MainTheme" to="." method="_on_MainTheme_finished"]
[connection signal="finished" from="TitleTheme" to="." method="_on_TitleTheme_finished"]
[connection signal="finished" from="CreditsTheme" to="." method="_on_CreditsTheme_finished"]
